--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "crm for photo studio",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js"
+    "dev": "nodemon src/bot.js",
+    "start": "node src/bot.js"
   },
   "author": "artur kozub",
   "license": "ISC",
